feat(volume-backup): preselect snapshot option on volume backup
ref: MANAGER-10923

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/snapshots/snapshots.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/snapshots/snapshots.html
@@ -134,7 +134,7 @@
             <oui-datagrid-topbar>
                 <button
                     class="oui-button oui-button_secondary"
-                    data-ng-click="$ctrl.createSnapshot()"
+                    data-ng-click="$ctrl.goToCreateVolumeBackup()"
                     data-track-on="click"
                     data-track-name="PCI_PROJECTS_SNAPSHOTS_ADD"
                     data-track-type="navigation"
