--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/notebook-details/notebook-details.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/notebook-details/notebook-details.html
@@ -51,7 +51,7 @@
                         data-size="m"
                         data-icon-right="oui-icon-external-link"
                         data-disabled="!$ctrl.isNotebookRunning()"
-                        data-on-click="$ctrl.openLiveCodeEditor()"
+                        data-on-click="$ctrl.onOpenJupyterLab()"
                     >
                         JupyterLab
                     </oui-button>
