--- a/packages/manager/modules/pci/src/projects/project/data-processing/home/data-processing-home.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/home/data-processing-home.html
@@ -27,7 +27,7 @@
                             </button>
                             <button
                                 data-placement="end"
-                                data-ng-click="$ctrl.showJobs()"
+                                data-ng-click="$ctrl.onShowJobsClick()"
                                 class="oui-button oui-button_secondary oui-button_icon-left"
                                 data-track-on="click"
                                 data-track-name="public-cloud::pci::projects::project::data-processing"
@@ -79,7 +79,7 @@
                             </button>
                             <button
                                 data-placement="end"
-                                data-ng-click="$ctrl.showNotebooks()"
+                                data-ng-click="$ctrl.onShowNotebooksClick()"
                                 class="oui-button oui-button_secondary oui-button_icon-left"
                                 data-track-on="click"
                                 data-track-name="public-cloud::pci::projects::project::data-processing-notebooks"
