--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/data-processing-notebooks.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/data-processing-notebooks.html
@@ -19,7 +19,7 @@
             >
                 <oui-button
                     data-variant="link"
-                    data-on-click="$ctrl.showNotebook($row.id)"
+                    data-on-click="$ctrl.onShowNotebook($row.id)"
                 >
                     <span data-ng-bind="::$row.spec.name"></span>
                 </oui-button>
@@ -83,17 +83,16 @@
                 data-property="status.url"
                 data-type="string"
             >
-                <a
-                    class="oui-link oui-link_icon"
-                    data-ng-href="{{$row.status.url}}"
-                    target="_blank"
-                    rel="noopener"
+                <oui-button
+                    data-variant="link"
+                    data-on-click="$ctrl.onShowJupyterLab($row.status.url)"
                 >
-                    JupyterLab<span
+                    JupyterLab
+                    <span
                         class="oui-icon oui-icon-external-link"
                         aria-hidden="true"
                     ></span>
-                </a>
+                </oui-button>
             </oui-datagrid-column>
             <oui-action-menu data-compact data-placement="end">
                 <oui-action-menu-item
