Revert "fix(dedicated.payments): delete a contradiction for payment method (#9028)"
This reverts commit f59c9135afbc7571baffe49a14d9e1ccaaf56dfe.

Signed-off-by: Anoop <anoop.n@ovhcloud.com>

--- a/packages/manager/modules/billing/src/payment/method/index.html
+++ b/packages/manager/modules/billing/src/payment/method/index.html
@@ -14,6 +14,13 @@
             data-translate="billing_payment_method_bank_account_processing_delay"
         ></span>
     </oui-message>
+
+    <oui-message class="mb-4" data-type="warning" data-dismissable>
+        <span
+            data-translate="billing_payment_method_credit_card_disclaimer"
+        ></span>
+    </oui-message>
+
     <oui-message
         class="mb-4"
         data-type="error"
