--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/add.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/users/add/add.html
@@ -33,6 +33,10 @@
                 valid="$ctrl.checkPattern(addUserForm.username.$viewValue, $ctrl.inputRules.name.pattern)"
                 data-label="{{:: 'pci_databases_users_add_username_pattern_rule' | translate }}"
             ></pci-storage-database-input-rule>
+            <pci-storage-database-input-rule
+                valid="!$ctrl.checkUsernameExist(addUserForm.username.$viewValue)"
+                data-label="{{:: 'pci_databases_users_add_error_username_exist' | translate }}"
+            ></pci-storage-database-input-rule>
         </div>
     </oui-field>
 
@@ -265,7 +269,7 @@
             data-size="l"
             data-variant="primary"
             data-icon-right="oui-icon-arrow-right"
-            data-disabled="$ctrl.processing || !$ctrl.model.username"
+            data-disabled="$ctrl.processing || !$ctrl.model.username || $ctrl.checkUsernameExist($ctrl.model.username)"
             data-on-click="$ctrl.addUser()"
         >
             <span data-translate="pci_databases_users_add_create"></span>
