--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-3">
+<div class="container-fluid px-0 mt-3" data-ui-view>
     <!-- error messages -->
     <cui-message-container
         data-messages="$ctrl.messages"
@@ -97,7 +97,11 @@
                 ></span>
             </span>
         </oui-datagrid-column>
-        <oui-action-menu data-compact data-placement="end">
+        <oui-action-menu
+            data-compact
+            data-placement="end"
+            data-ng-if="!$ctrl.isEngineVersionDeprecated"
+        >
             <oui-action-menu-item
                 data-ng-if="$ctrl.isFeatureActivated('restoreFromBackup')"
                 data-on-click="$ctrl.restoreBackup($row)"
@@ -108,11 +112,26 @@
             <oui-action-menu-item
                 data-on-click="$ctrl.forkBackup($row)"
                 data-disabled="!($row.isActive() && $ctrl.database.isActive())"
+                data-ng-if="!$ctrl.isEngineVersionDeprecated"
             >
                 <span data-translate="pci_databases_backup_fork"></span>
             </oui-action-menu-item>
         </oui-action-menu>
-        <oui-datagrid-topbar data-ng-if="$ctrl.backupList > 0">
+        <oui-datagrid-topbar>
+            <oui-button
+                data-on-click="$ctrl.forkBackup()"
+                data-ng-if="!$ctrl.isEngineVersionDeprecated"
+                data-disabled="!$ctrl.isTopButtonEnabled"
+            >
+                <span data-translate="pci_databases_backup_fork"></span>
+            </oui-button>
+            <oui-button
+                data-ng-if="$ctrl.isFeatureActivated('restoreFromBackup')"
+                data-on-click="$ctrl.restoreBackup()"
+                data-disabled="!$ctrl.isTopButtonEnabled"
+            >
+                <span data-translate="pci_databases_backup_restore"></span>
+            </oui-button>
             <button
                 class="float-right oui-button oui-button_secondary oui-button_icon-only oui-button_s"
                 type="button"
