fix(storages): volume backup and volume block tracking
ref: MANAGER-10570

Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/create.template.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/create.template.html
@@ -81,6 +81,7 @@
     <!--Link to know more about backup-->
     <a
         data-ng-href="{{:: $ctrl.knowMoreAboutBackupLink}}"
+        data-ng-click="$ctrl.onPriceLinkClick()"
         target="_blank"
         rel="noopener"
     >
