--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/backups/backups.html
@@ -53,17 +53,15 @@
             data-title=":: 'pci_databases_backup_region' | translate"
             data-property="region"
             data-sortable="asc"
-            data-type="string"
-            data-filterable
         >
-            <span
-                data-ng-bind="$row.region ? $ctrl.ovhManagerRegionService.getTranslatedMacroRegion($row.region) : '-'"
-            ></span>
+            <span data-ng-bind=":: $ctrl.getRegions($row)"></span>
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_database_common_creation_date' | translate"
             data-property="createdAt"
             data-sortable
+            data-type="date"
+            data-filterable
         >
             <span data-ng-bind="$row.createdAt | date: 'medium'"></span>
         </oui-datagrid-column>
@@ -71,6 +69,8 @@
             data-title=":: 'pci_databases_backup_expiration_date' | translate"
             data-property="expirationDate"
             data-sortable
+            data-type="date"
+            data-filterable
         >
             <span
                 data-ng-bind=":: $ctrl.getExpiryDate($row) | date: 'medium'"
