fix(dedicated.ip): resolve hover css issue
ref: DTRSD-109869

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/ip.html
+++ b/packages/manager/apps/dedicated/client/app/ip/ip.html
@@ -5,7 +5,7 @@
             <h1 class="oui-header__title">
                 <span data-translate="module_ip_dashboard_title"></span>
                 <oui-button
-                    class="oui-button_secondary"
+                    data-variant="secondary"
                     data-on-click="onAgoraOrderButtonClick()"
                 >
                     <i
@@ -17,7 +17,7 @@
                     ></span>
                 </oui-button>
                 <oui-button
-                    class="oui-button_secondary"
+                    data-variant="secondary"
                     data-on-click="onByoipConfigurationButtonClick()"
                 >
                     <i
