fix(pci): add asia specific guide url in pci onboarding page
ref: MANAGER-11141

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/project.html
+++ b/packages/manager/modules/pci/src/projects/project/project.html
@@ -127,7 +127,7 @@
                                                 ></oui-tile-term>
                                                 <oui-tile-description>
                                                     <a
-                                                        data-ng-href="{{ ::link.href }}"
+                                                        data-ng-href="{{ :: $ctrl.coreConfig.getUser().ovhSubsidiary === $ctrl.IN_SUBSIDARY ? link.asiahref : link.defaulthref }}"
                                                         target="_blank"
                                                         rel="noopener"
                                                         data-translate="{{ ::link.description }}"
