feat: add data-inegration project
DATATR-286

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/cli/cli.html
+++ b/packages/manager/modules/pci/src/projects/project/ai-dashboard/tabs/cli/cli.html
@@ -5,10 +5,10 @@
             <p data-translate="pci_ai_dashboard_cli_description"></p>
             <!-- Installation -->
             <h4 data-translate="pci_ai_dashboard_cli_install"></h4>
-            <pci-project-ai-code-sample
+            <pci-code-sample
                 data-code="$ctrl.CLI_INSTALL_CODE"
                 data-language="'bash'"
-            ></pci-project-ai-code-sample>
+            ></pci-code-sample>
             <oui-message class="mt-2" data-type="info">
                 <span
                     data-translate="pci_ai_dashboard_cli_install_restart_terminal"
