fix(storage.cold-archive): unify init of user cred attr at service level
ref: MANAGER-11272

Signed-off-by: Rafik Adiche <rafik.adiche.ext@corp.ovh.com>
Signed-off-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>
Co-authored-by: Mohammed ZAHAF <mohammed.zahaf.ext@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
+++ b/packages/manager/modules/pci/src/projects/project/storages/cold-archive/users/users.html
@@ -52,7 +52,7 @@
     ></oui-datagrid-column>
     <oui-datagrid-column
         data-title="'pci_projects_project_storages_containers_users_accesskey' | translate"
-        data-property="s3Credentials[0].access"
+        data-property="s3Credentials.access"
         data-type="string"
         data-sortable
         data-filterable
