--- a/packages/manager/modules/pci/src/projects/project/ai/apps/apps.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/apps.html
@@ -17,6 +17,22 @@
             ></a>
         </oui-datagrid-column>
         <oui-datagrid-column
+            data-title=":: 'Image'"
+            data-type="string"
+            data-searchable
+            data-filterable
+            data-sortable
+        >
+            <div class="d-flex flex-column">
+                <span class="text-image-truncated" title="{{$row.spec.image}}"
+                    >{{$row.spec.image}}</span
+                >
+                <small ng-if="$row.partner"
+                    >Image fournie par {{$row.partner.name}}</small
+                >
+            </div>
+        </oui-datagrid-column>
+        <oui-datagrid-column
             data-title=":: 'pci_ai_app_list_region' | translate"
             data-property="region"
             data-type="string"
@@ -24,11 +40,21 @@
             data-filterable
             data-sortable
         >
-            <span
-                data-ng-bind=":: $ctrl.ovhManagerRegionService.getTranslatedMacroRegion($row.region)"
-            ></span>
+            <span data-ng-bind=":: $row.region"></span>
         </oui-datagrid-column>
         <oui-datagrid-column
+            data-title="'CPU / GPU / Réplicas'"
+            data-property="specScore"
+            data-type="number"
+            data-sortable
+            data-filterable
+        >
+            <div class="d-flex flex-column">
+                <span>{{::$row.cpu || 0}} CPU / {{::$row.gpu || 0}} GPU</span>
+                <span>{{::$row.replicas || 0}} Réplicas</span>
+            </div>
+        </oui-datagrid-column>
+        <!-- <oui-datagrid-column
             data-title=":: 'pci_ai_app_list_cpu' | translate"
             data-property="cpu"
             data-type="number"
@@ -45,6 +71,14 @@
         >
         </oui-datagrid-column>
         <oui-datagrid-column
+            data-title=":: 'pci_ai_app_list_replicas' | translate"
+            data-property="replicas"
+            data-type="number"
+            data-sortable
+            data-filterable
+        >
+        </oui-datagrid-column> -->
+        <oui-datagrid-column
             data-title=":: 'pci_ai_app_list_privacy' | translate"
             data-property="unsecureHttp"
             data-type="boolean"
@@ -54,14 +88,6 @@
             <span
                 data-translate="{{:: $row.unsecureHttp ? 'pci_ai_app_list_privacy_public' : 'pci_ai_app_list_privacy_private' }}"
             ></span>
-        </oui-datagrid-column>
-        <oui-datagrid-column
-            data-title=":: 'pci_ai_app_list_replicas' | translate"
-            data-property="replicas"
-            data-type="number"
-            data-sortable
-            data-filterable
-        >
         </oui-datagrid-column>
         <oui-datagrid-column
             data-title=":: 'pci_ai_app_list_creation_date' | translate"
@@ -99,6 +125,12 @@
                 ></span>
             </span>
         </oui-datagrid-column>
+        <!-- <oui-datagrid-row-detail>
+            Birth date : <span ng-bind="$row.birth"></span>
+            <br />
+            Parents :
+            <span ng-bind="$row.parents.mother.firstName"></span> <span ng-bind="$row.parents.mother.lastName"></span> - <span ng-bind="$row.parents.father.firstName"></span> <span ng-bind="$row.parents.father.lastName"></span>
+        </oui-datagrid-row-detail> -->
         <oui-action-menu data-compact data-placement="left-start">
             <oui-action-menu-item data-on-click="$ctrl.goToAppDetails($row)">
                 <span data-translate="pci_ai_app_list_details"></span>
