fix(pci.data-processing): fix missing executor numbers
datatr-277

Signed-off-by: Gael Leblan <gael.leblan@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/notebook-details/notebook-details.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/notebook-details/notebook-details.html
@@ -165,7 +165,7 @@
                     data-translate-values="{'clusterName': '<strong>' + template.name + ' :</strong>', 
                     'driverCores': template.driverCores, 'driverMemory': $ctrl.convertToGio(template.driverMemory), 'driverMemoryOverhead': template.driverMemoryOverhead, 
                     'executorCores': template.executorCores, 'executorMemory': $ctrl.convertToGio(template.executorMemory), 'executorMemoryOverhead': template.executorMemoryOverhead,
-                    'executorNumber': template.executorNum, 'htPrice': 0, 'ttcPrice': 0}"
+                    'executorNumber': template.executorNumber, 'htPrice': 0, 'ttcPrice': 0}"
                 >
                 </oui-tile-description>
             </oui-tile-definition>
