--- a/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/data-processing-notebooks.html
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/notebooks/data-processing-notebooks.html
@@ -96,7 +96,7 @@
             </oui-datagrid-column>
             <oui-action-menu data-compact data-placement="end">
                 <oui-action-menu-item
-                    data-on-click="$ctrl.showNotebook($row.id)"
+                    data-on-click="$ctrl.onShowNotebook($row.id)"
                 >
                     <span
                         data-translate="data_processing_list_button_notebook_details"
@@ -112,7 +112,7 @@
                 </oui-action-menu-item>
                 <oui-action-menu-item
                     data-disabled="!$ctrl.isNotebookRunning($row)"
-                    data-on-click="$ctrl.terminateNotebook($row.id, $row.name)"
+                    data-on-click="$ctrl.onTerminateClick($row.id)"
                 >
                     <span
                         data-translate="data_processing_list_button_notebook_stop"
@@ -120,7 +120,7 @@
                 </oui-action-menu-item>
                 <oui-action-menu-item
                     data-disabled="$ctrl.isNotebookRunning($row)"
-                    data-on-click="$ctrl.deleteNotebook($row.id, $row.name)"
+                    data-on-click="$ctrl.onDeleteClick($row.id)"
                 >
                     <span
                         data-translate="data_processing_list_button_notebook_delete"
