feat(iam): update app for container
Signed-off-by: Florian Renaut <florian.renaut@corp.ovh.com>

--- a/packages/manager/modules/iam/src/dashboard/dashboard.template.html
+++ b/packages/manager/modules/iam/src/dashboard/dashboard.template.html
@@ -9,7 +9,7 @@
                     data-translate="iam_dashboard_header_tabs_item_policies"
                 ></span
             ></oui-header-tabs-item>
-            <oui-header-tabs-item data-href="{{ :: $ctrl.usersManagementLink }}"
+            <oui-header-tabs-item data-state="iam.policy.identitiesRedirection"
                 ><span
                     data-translate="iam_dashboard_header_tabs_item_identities"
                 ></span
