fix(dedicated.ip): fix filter issue on ips
ref: DTRSD-112402

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/ip/failover/failover.template.html
+++ b/packages/manager/apps/dedicated/client/app/ip/failover/failover.template.html
@@ -24,6 +24,7 @@
                 data-translate="ip_failover_unused_filter"
             ></span>
             <oui-switch
+                class="mr-1"
                 data-name="unusedFilter"
                 data-model="$ctrl.unusedFilter"
                 data-on-change="$ctrl.toggleUnusedFilter()"
