feat(*): implement tracking for acquisition storage
ref: MANAGER-11348

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/hub/src/dashboard/dashboard.html
+++ b/packages/manager/apps/hub/src/dashboard/dashboard.html
@@ -25,7 +25,7 @@
             <a
                 class="oui-link_icon"
                 href="{{:: $ctrl.ACCOUNT_DASHBOARD_URL }}"
-                data-ng-click="$ctrl.trackClick()"
+                data-ng-click="$ctrl.trackClick($ctrl.SIRET_HIT_PREFIX)"
                 target="_top"
             >
                 <span
@@ -50,7 +50,7 @@
             <a
                 class="oui-link_icon"
                 data-ng-href="{{:: $ctrl.myIdentitySectionLink }}"
-                data-ng-click="$ctrl.trackClick()"
+                data-ng-click="$ctrl.trackClick($ctrl.KYC_HIT_PREFIX)"
                 target="_blank"
                 rel="noopener"
             >
