--- a/packages/manager/apps/hub/src/dashboard/order-dashboard/template.html
+++ b/packages/manager/apps/hub/src/dashboard/order-dashboard/template.html
@@ -10,7 +10,7 @@
     <a
         class="oui-link_icon"
         data-ng-href="{{:: $ctrl.myIdentitySectionLink }}"
-        data-ng-click="$ctrl.trackClick()"
+        data-ng-click="$ctrl.trackClick($ctrl.KYC_HIT_PREFIX))"
         target="_blank"
         rel="noopener"
     >
